Position the price breakdown below the button

--- a/app/assets/javascripts/templates/price_breakdown.html.haml
+++ b/app/assets/javascripts/templates/price_breakdown.html.haml
@@ -1,5 +1,5 @@
 .joyride-tip-guide.price_breakdown{"ng-class" => "{ in: tt_isOpen, fade: tt_animation }"}
-  %span.joyride-nub.right
+  %span.joyride-nub.top
   .joyride-content-wrapper
     %ul
       %li
