--- a/app/assets/javascripts/templates/price_breakdown.html.haml
+++ b/app/assets/javascripts/templates/price_breakdown.html.haml
@@ -1,5 +1,6 @@
 .joyride-tip-guide.price_breakdown{"ng-class" => "{ in: tt_isOpen, fade: tt_animation }"}
   %span.joyride-nub.top
+  .background{ng: {show: "tt_isOpen", click: "tt_isOpen = false"}}
   .joyride-content-wrapper
     %ul
       %li
