Modify payment_list partial to be shared
- Partial is used by both the invoice pdf and the order confirmation email
- separate scss file for new payment list table
- extracted outstanding balance logic (also changed in payments view.. admin/orders/RXXX/payments)
- translations in shared.payments_list and lazy loaded

--- a/app/views/spree/shared/_payment.html.haml
+++ b/app/views/spree/shared/_payment.html.haml
@@ -4,7 +4,7 @@
       = t :email_payment_paid
     - else
       - if @order.outstanding_balance?
-        = @order.outstanding_balance < 0 ? t(:credit_owed) : t(:balance_due)
+        = outstanding_balance_label(@order)
         \:
         %strong= @order.display_outstanding_balance
       - else
@@ -12,6 +12,4 @@
   %strong
     = t :email_payment_summary
 - if @order.payments.any?
-  = render partial: 'list', locals: { payments: @order.payments }
-- else
-  .alpha.twelve.columns.no-objects-found= t(:order_has_no_payments)
+  = render partial: 'spree/shared/payments_list', locals: { payments: @order.payments }
