--- a/app/views/spree/shared/_payments_list.html.haml
+++ b/app/views/spree/shared/_payments_list.html.haml
@@ -1,4 +1,4 @@
-%table.payment-list
+%table.payments-list
   %thead
     %tr
       %th= t('.date_time')
@@ -10,5 +10,5 @@
       %tr
         %td= l(payment.created_at, format: "%b %d, %Y %H:%M")
         %td.payment-method-name= payment_method_name(payment)
-        %td.payment-state= t(payment.state, scope: :payment_states, default: payment.state.capitalize)
+        %td.payment-state.payment-state-value= t(payment.state, scope: :payment_states, default: payment.state.capitalize)
         %td.amount= payment.display_amount.to_html
