--- a/app/assets/javascripts/templates/partials/shop_variant_no_group_buy.html.haml
+++ b/app/assets/javascripts/templates/partials/shop_variant_no_group_buy.html.haml
@@ -1,14 +1,14 @@
 .small-5.medium-3.large-3.columns.text-right{"ng-if" => "::!variant.product.group_buy"}
 
   %button.add-variant{type: "button", ng: {if: "!variant.line_item.quantity", click: "add(1)", disabled: "!canAdd(1)"}}
-    {{ "js.shop_variant_no_group_buy.add" | t }}
+    {{ "js.shopfront.variant.add_to_cart" | t }}
   %button.variant-quantity{type: "button", ng: {if: "variant.line_item.quantity", click: "add(-1)"}}>
     －
   %button.variant-quantity{type: "button", ng: {if: "variant.line_item.quantity", click: "add(1)", disabled: "!canAdd(1)"}}
     ＋
   %br
   .variant-quantity-display{ng: {class: "{visible: variant.line_item.quantity}"}}
-    {{ "js.shop_variant_no_group_buy.in_cart" | t:{quantity: variant.line_item.quantity || 0} }}
+    {{ "js.shopfront.variant.quantity_in_cart" | t:{quantity: variant.line_item.quantity || 0} }}
   %input{type: :hidden,
          name: "variants[{{::variant.id}}]",
          ng: {model: "variant.line_item.quantity"}}
