--- a/app/assets/javascripts/templates/bulk_buy_modal.html.haml
+++ b/app/assets/javascripts/templates/bulk_buy_modal.html.haml
@@ -14,20 +14,24 @@
       {{ "js.shopfront.bulk_buy_modal.min_quantity" | t }}
     %div
       %button.bulk-buy-add.variant-quantity{type: "button", ng: {click: "add(-1)", disabled: "!canAdd(-1)"}}>
+        -# U+FF0D Fullwidth Hyphen-Minus
         －
       %span.bulk-buy.variant-quantity>
         {{ variant.line_item.quantity }}
       %button.bulk-buy-add.variant-quantity{type: "button", ng: {click: "add(1)", disabled: "!canAdd(1)"}}
+        -# U+FF0B Fullwidth Plus Sign
         ＋
   .columns.small-6
     .variant-bulk-buy-quantity-label
       {{ "js.shopfront.bulk_buy_modal.max_quantity" | t }}
     %div
       %button.bulk-buy-add.variant-quantity{type: "button", ng: {click: "addMax(-1)", disabled: "!canAddMax(-1)"}}>
+        -# U+FF0D Fullwidth Hyphen-Minus
         －
       %span.bulk-buy.variant-quantity>
         {{ variant.line_item.max_quantity }}
       %button.bulk-buy-add.variant-quantity{type: "button", ng: {click: "addMax(1)", disabled: "!canAddMax(1)"}}
+        -# U+FF0B Fullwidth Plus Sign
         ＋
 
 %ng-include{src: "'partials/close.html'"}
