--- a/app/assets/javascripts/templates/partials/shop_variant_no_group_buy.html.haml
+++ b/app/assets/javascripts/templates/partials/shop_variant_no_group_buy.html.haml
@@ -3,8 +3,10 @@
   %button.add-variant{type: "button", ng: {if: "!variant.line_item.quantity", click: "add(1)", disabled: "!canAdd(1)"}}
     {{ "js.shopfront.variant.add_to_cart" | t }}
   %button.variant-quantity{type: "button", ng: {if: "variant.line_item.quantity", click: "add(-1)"}}>
+    -# U+FF0D Fullwidth Hyphen-Minus
     －
   %button.variant-quantity{type: "button", ng: {if: "variant.line_item.quantity", click: "add(1)", disabled: "!canAdd(1)"}}
+    -# U+FF0B Fullwidth Plus Sign
     ＋
   %br
   .variant-quantity-display{ng: {class: "{visible: variant.line_item.quantity}"}}
