--- a/app/views/spree/admin/overview/single_enterprise_dashboard.html.haml
+++ b/app/views/spree/admin/overview/single_enterprise_dashboard.html.haml
@@ -37,10 +37,8 @@
   .alpha.seven.columns.dashboard_item.single-ent#map
     .header
       %h3
-        %span.icon-map-marker
+        %span.icon-user
         = t "your_profil_live"
-      %p
-        = t "on_ofn_map"
     .list
       %a.button.bottom{href: main_app.enterprise_shop_url(@enterprise), target: '_blank'}
         = t "see"
