--- a/app/views/admin/enterprises/form/_business_details.html.haml
+++ b/app/views/admin/enterprises/form/_business_details.html.haml
@@ -31,3 +31,13 @@
     = f.label :invoice_text, t('.invoice_text')
   .omega.eight.columns
     = f.text_area :invoice_text, style: "width: 100%; height: 100px;"
+
+.row
+  .alpha.three.columns
+    = f.label :terms_and_conditions, t('.terms_and_conditions')
+
+  .omega.eight.columns
+    %a{ href: '{{ Enterprise.terms_and_conditions }}', ng: { if: 'Enterprise.terms_and_conditions' } }
+      = '{{ Enterprise.terms_and_conditions_file_name }}'
+    %p
+      = f.file_field :terms_and_conditions
