Add option to remove existing terms and conditions file

--- a/app/views/admin/enterprises/form/_business_details.html.haml
+++ b/app/views/admin/enterprises/form/_business_details.html.haml
@@ -41,3 +41,6 @@
       = '{{ Enterprise.terms_and_conditions_file_name }}'
     .pad-top
       = f.file_field :terms_and_conditions
+    .pad-top
+      %a.button.red{ href: '', ng: {click: 'removeTermsAndConditions()', if: 'Enterprise.terms_and_conditions'} }
+        = t('.remove_terms_and_conditions')
