Adjust payment state conditional
The `Spree::Order#paid?` method actually includes orders with `payment_state == "credit_owed"`, which was breaking the desired display logic here.

--- a/app/views/spree/shared/_payment.html.haml
+++ b/app/views/spree/shared/_payment.html.haml
@@ -1,6 +1,6 @@
 %p.callout
   %span{:style => "float:right;"}
-    - if @order.paid?
+    - if @order.paid? && !@order.outstanding_balance?
       = t :email_payment_paid
     - else
       - if @order.outstanding_balance?
