--- a/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
@@ -117,7 +117,9 @@
           }
 
           h3 {
-            font-size: 1.5rem;
+            font-size: 1.3rem;
+            margin-top: 0.75rem;
+            margin-bottom: 0.6rem;
           }
 
           h3 a {
