--- a/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
@@ -138,7 +138,7 @@
             margin: .5em 0;
 
             li {
-              margin: 0 0.25rem 0 0;
+              margin: 0 0.25rem 0.25rem 0;
 
               a {
                 padding: 0.1em 0.625em;
