Darken add-button on hover

--- a/app/assets/stylesheets/darkswarm/_shop-inputs.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-inputs.scss
@@ -22,6 +22,9 @@ button.add-variant, button.variant-quantity {
   padding: 0;
   transition: none;
 
+  &:hover {
+    background-color: $orange-600;
+  }
   &[disabled] {
     &:hover, &:focus {
       background-color: $orange-500;
