Enlarge product pictures flexibly for devices
This change will need a change of the `small` image size. The new format
should be `227x227#`. The `#` crops the center of an image to make it
square if necessary. All old images should then be regenerated:

  rake paperclip:refresh:thumbnails CLASS=Spree::Image

--- a/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
@@ -15,7 +15,8 @@
       }
 
       .shop-variants {
-        padding-left: 7.9375rem;
+        // product-thumb width + 1rem
+        padding-left: calc(100% / 9 * 2 + 1rem);
 
         @include breakpoint(phablet) {
           padding-left: 0;
@@ -93,8 +94,13 @@
         }
 
         .summary-header {
-          padding-left: 7.9375rem;
+          // product-thumb width + 1rem
+          padding-left: calc(100% / 9 * 2 + 1rem);
           padding-right: 1rem;
+
+          @include breakpoint(phablet) {
+            padding-left: calc(100% / 12 * 4 + 1rem);
+          }
 
           .product-producer {
             white-space: nowrap;
