--- a/app/views/spree/admin/orders/customer_details/_form.html.haml
+++ b/app/views/spree/admin/orders/customer_details/_form.html.haml
@@ -26,3 +26,4 @@
 
   - content_for :head do
     = javascript_include_tag 'admin/spree/orders/address_states.js'
+    = javascript_include_tag 'admin/spree/orders/use_billing.js'
