improve styling on calculators UI

--- a/app/views/spree/admin/payment_methods/_provider_settings.html.haml
+++ b/app/views/spree/admin/payment_methods/_provider_settings.html.haml
@@ -10,4 +10,9 @@
         = t(:provider_settings)
       .preference-settings
         = fields_for :payment_method, @payment_method do |payment_method_form|
-          = preference_fields(@payment_method, payment_method_form)
+          - fields = preference_fields(@payment_method, payment_method_form)
+          - fields.each do |f|
+            .field.alpha.three.columns
+              = f[0].html_safe
+            .field.omega.eight.columns
+              = f[1].html_safe
