--- a/app/views/admin/enterprise_fees/_calculator_settings.html.haml
+++ b/app/views/admin/enterprise_fees/_calculator_settings.html.haml
@@ -7,6 +7,9 @@
       - if !enterprise_fee.new_record?
         .calculator-settings
           = f.fields_for :calculator do |calculator_form|
-            = preference_fields(enterprise_fee.calculator, calculator_form)
+            - fields = preference_fields(enterprise_fee.calculator, calculator_form)
+            - fields.each do |f|
+              = f[0].html_safe
+              = f[1].html_safe
 
 = calculator_form_string
