--- a/app/views/spree/admin/shared/_calculator_fields.html.haml
+++ b/app/views/spree/admin/shared/_calculator_fields.html.haml
@@ -2,12 +2,19 @@
   %legend{align: "center"}= t(:calculator)
   #preference-settings
     .field
-      = f.label(:calculator_type, t(:calculator), for: 'calc_type')
-      = f.select(:calculator_type, @calculators.map { |c| [c.description, c.name] }, {}, {id: 'calc_type', class: 'select2 fullwidth'})
+      .alpha.three.columns
+        = f.label(:calculator_type, t(:calculator), for: 'calc_type')
+      .omega.eight.columns
+        = f.select(:calculator_type, @calculators.map { |c| [c.description, c.name] }, {}, {id: 'calc_type', class: 'select2 fullwidth'})
     - if !@object.new_record?
       .field
         .calculator-settings
           = f.fields_for :calculator do |calculator_form|
-            = preference_fields(@object.calculator, calculator_form)
+            - fields = preference_fields(@object.calculator, calculator_form)
+            - fields.each do |f|
+              .field.alpha.three.columns
+                = f[0].html_safe
+              .field.omega.eight.columns
+                = f[1].html_safe
         - if @object.calculator.respond_to?(:preferences)
           %span.calculator-settings-warning.info.warning= t(:calculator_settings_warning)
