--- a/app/views/admin/enterprise_fees/_calculator_settings.html.haml
+++ b/app/views/admin/enterprise_fees/_calculator_settings.html.haml
@@ -7,9 +7,8 @@
       - if !enterprise_fee.new_record?
         .calculator-settings
           = f.fields_for :calculator do |calculator_form|
-            - fields = preference_fields(enterprise_fee.calculator, calculator_form)
-            - fields.each do |f|
-              = f[:label]
-              = f[:field]
+            - preference_fields(enterprise_fee.calculator, calculator_form).each do |field|
+              = field[:label]
+              = field[:field]
 
 = calculator_form_string
