--- a/app/views/layouts/darkswarm.html.haml
+++ b/app/views/layouts/darkswarm.html.haml
@@ -40,7 +40,7 @@
     = render "layouts/bugsnag_js"
 
     - if Spree::Config.stripe_connect_enabled
-      = render "shared/include_stripe_js"
+      = render "shared/stripe_js"
 
     - if !ContentConfig.open_street_map_enabled
       %script{src: "//maps.googleapis.com/maps/api/js?libraries=places,geometry#{ ENV['GOOGLE_MAPS_API_KEY'] ? '&key=' + ENV['GOOGLE_MAPS_API_KEY'] : ''} "}
