--- a/app/views/spree/layouts/_admin_body.html.haml
+++ b/app/views/spree/layouts/_admin_body.html.haml
@@ -19,7 +19,7 @@
         = render :partial => 'spree/layouts/admin/login_nav'
 
   %nav#admin-menu{ data: { hook: '' }}
-    .container
+    .container.no-gutter
       .sixteen.columns.main-menu-wrapper
         %ul.inline-menu.fullwidth-menu{"data-hook" => "admin_tabs"}
           = render :partial => 'spree/admin/shared/tabs'
