Add "Price breakdown" heading to pop-up
The translation key was already present even though it was unused.

--- a/app/assets/javascripts/templates/price_breakdown.html.haml
+++ b/app/assets/javascripts/templates/price_breakdown.html.haml
@@ -2,6 +2,7 @@
   %span.joyride-nub.top
   .background{ng: {click: "tt_isOpen = false"}}
   .joyride-content-wrapper
+    %h6= t("price_breakdown")
     %ul
       %li
         .right {{ ::variant.price | localizeCurrency }}
