--- a/app/assets/stylesheets/darkswarm/_shop-inputs.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-inputs.scss
@@ -8,6 +8,10 @@
   @include placeholder(rgba(0, 0, 0, 0.4), #777);
 }
 
+.reveal-modal.product-bulk-modal {
+  width: 26em;
+}
+
 // Components to add variants to cart and change quantities
 //
 // They are not nested so that they can be used in modals.
