--- a/app/views/admin/enterprises/form/_business_details.html.haml
+++ b/app/views/admin/enterprises/form/_business_details.html.haml
@@ -37,8 +37,8 @@
     = f.label :terms_and_conditions, t('.terms_and_conditions')
 
   .omega.eight.columns
-    %a{ href: '{{ Enterprise.terms_and_conditions }}', target: "_blank", ng: { if: 'Enterprise.terms_and_conditions' } }
-      = '{{ Enterprise.terms_and_conditions_file_name }}'
+    %a{ href: '{{ Enterprise.terms_and_conditions }}', target: '_blank', ng: { if: 'Enterprise.terms_and_conditions' } }
+      = '{{ Enterprise.terms_and_conditions_file_name }}' " uploaded on " '{{ Enterprise.terms_and_conditions_updated_at }}'
     .pad-top
       = f.file_field :terms_and_conditions
     .pad-top
