--- a/app/views/spree/admin/general_settings/edit.html.haml
+++ b/app/views/spree/admin/general_settings/edit.html.haml
@@ -87,6 +87,15 @@
             .field
               = preference_field_tag(:enable_localized_number?, Spree::Config[:enable_localized_number?], type: Spree::Config.preference_type(:enable_localized_number?))
               = label_tag(:enable_localized_number?, t('admin.number_localization.enable_localized_number')) + tag(:br)
+          %fieldset.available_units.no-border-bottom
+            %legend{:align => "center"}= t('admin.available_units')
+            .field
+              - all_units = ["g", "oz", "lb", "kg", "T", "mL", "L", "kL"]
+              - selected_units = Spree::Config[:available_units].split(",")
+              - all_units.each do |unit|
+                - selected = selected_units.include?(unit)
+                = preference_field_tag("available_units_#{unit}", selected, { type: :boolean, selected: selected })
+                = label_tag(unit, unit.downcase) + tag(:br)
 
       .form-buttons.filter-actions.actions{"data-hook" => "buttons"}
         = button Spree.t('actions.update'), 'icon-refresh'
