--- a/app/assets/stylesheets/darkswarm/_shop-inputs.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-inputs.scss
@@ -83,7 +83,15 @@ button.bulk-buy.variant-quantity {
 }
 
 button.bulk-buy-add.variant-quantity {
-  width: 2.5rem
+  width: 2.5rem;
+
+  &[disabled] {
+    background-color: $grey-400;
+
+    &:hover, &:focus {
+      background-color: $grey-400;
+    }
+  }
 }
 
 span.bulk-buy.variant-quantity {
