Distinguish unit size more from variant name

--- a/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
@@ -52,6 +52,7 @@
           & > *:nth-child(n + 2) {
             color: #888;
             font-size: 0.875rem;
+            font-style: italic;
             line-height: normal;
           }
         }
