Fade "From" producer label

--- a/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-product-rows.scss
@@ -107,6 +107,7 @@
           }
 
           .product-producer {
+            color: #888;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
