--- a/app/assets/stylesheets/darkswarm/branding.scss
+++ b/app/assets/stylesheets/darkswarm/branding.scss
@@ -47,6 +47,7 @@ $grey-200: #ddd;
 $grey-300: #ccc;
 $grey-400: #bbb;
 $grey-500: #999;
+$grey-550: #888;
 $grey-600: #777;
 $grey-650: #666;
 $grey-700: #555;
