--- a/app/views/shop/products/_summary.html.haml
+++ b/app/views/shop/products/_summary.html.haml
@@ -1,7 +1,7 @@
 .product-thumb
   %a{"ng-click" => "triggerProductModal()"}
     %span.product-thumb__bulk-label{"ng-if" => "::product.group_buy"}
-      = t("products_bulk")
+      = t(".bulk")
     %img{"ng-src" => "{{::product.primaryImageOrMissing}}"}
 
 .summary
