Remove old Javascript hacks for the main menu and replace with flex-based CSS properties

--- a/app/views/spree/layouts/_admin_body.html.haml
+++ b/app/views/spree/layouts/_admin_body.html.haml
@@ -21,7 +21,7 @@
   %nav#admin-menu{ data: { hook: '' }}
     .container.no-gutter
       .sixteen.columns.main-menu-wrapper
-        %ul.inline-menu.fullwidth-menu{"data-hook" => "admin_tabs"}
+        %ul.inline-menu{"data-hook" => "admin_tabs"}
           = render :partial => 'spree/admin/shared/tabs'
 
   - if content_for?(:sub_menu)
