Add subtle hover effect on clickable image

--- a/app/assets/stylesheets/darkswarm/_shop-product-thumb.scss
+++ b/app/assets/stylesheets/darkswarm/_shop-product-thumb.scss
@@ -24,6 +24,10 @@
           top: .8em;
           padding: .25em .5em;
         }
+
+        &:hover {
+          filter: brightness(96%);
+        }
       }
     }
   }
