--- a/app/views/registration/steps/_details.html.haml
+++ b/app/views/registration/steps/_details.html.haml
@@ -23,7 +23,7 @@
         .small-12.medium-9.large-6.columns
           .field
             %label{ for: 'enterprise_address' }= t(".address1_field")
-            %input.chunky{ id: 'enterprise_address', name: 'address1', required: true, placeholder: "{{'registration.steps.details.address1_field_placeholder' | t}}", required: true, ng: { model: 'enterprise.address.address1' } }
+            %input.chunky{ id: 'enterprise_address', name: 'address1', required: true, placeholder: "{{'registration.steps.details.address1_field_placeholder' | t}}", required: true, ng: { model: 'enterprise.address.address1' }}
             %span.error{ ng: { show: "details.address1.$error.required && submitted" } }
               = t(".address1_field_error")
           .field
@@ -35,20 +35,20 @@
             .small-12.medium-8.large-8.columns
               .field
                 %label{ for: 'enterprise_city' }= t('.suburb_field')
-                %input.chunky{ id: 'enterprise_city', name: 'city', required: true, placeholder: "{{'registration.steps.details.suburb_field_placeholder' | t}}", ng: { model: 'enterprise.address.city' } }
+                %input.chunky{ id: 'enterprise_city', name: 'city', required: true, placeholder: "{{'registration.steps.details.suburb_field_placeholder' | t}}", ng: { model: 'enterprise.address.city' }}
                 %span.error{ ng: { show: "details.city.$error.required && submitted" } }
                   = t(".suburb_field_error")
             .small-12.medium-4.large-4.columns
               .field
                 %label{ for: 'enterprise_zipcode' }= t(".postcode_field")
-                %input.chunky{ id: 'enterprise_zipcode', name: 'zipcode', required: true, placeholder: "{{'registration.steps.details.postcode_field_placeholder' | t}}", ng: { model: 'enterprise.address.zipcode' } }
+                %input.chunky{ id: 'enterprise_zipcode', name: 'zipcode', required: true, placeholder: "{{'registration.steps.details.postcode_field_placeholder' | t}}", ng: { model: 'enterprise.address.zipcode' }}
                 %span.error{ ng: { show: "details.zipcode.$error.required && submitted" } }
                   = t(".postcode_field_error")
           .row
             .small-12.medium-4.large-4.columns
               .field
                 %label{ for: 'enterprise_state' }= t(".state_field")
-                %select.chunky{ id: 'enterprise_state', name: 'state', ng: { model: 'enterprise.address.state_id', options: 's.id as s.abbr for s in enterprise.country.states', show: 'countryHasStates()', required: 'countryHasStates()' } }
+                %select.chunky{ id: 'enterprise_state', name: 'state', ng: { model: 'enterprise.address.state_id', options: 's.id as s.abbr for s in enterprise.country.states', show: 'countryHasStates()', required: 'countryHasStates()'  }}
                 %span.error{ ng: { show: "details.state.$error.required && submitted" } }
                   = t(".state_field_error")
             .small-12.medium-8.large-8.columns
@@ -57,6 +57,23 @@
                 %select.chunky{ id: 'enterprise_country', name: 'country', required: true, ng: { init: "setDefaultCountry(#{Spree::Config[:default_country_id]})", model: 'enterprise.country', options: 'c as c.name for c in countries' } }
                 %span.error{ ng: { show: "details.country.$error.required && submitted" } }
                   = t(".country_field_error")
+      .small-12.medium-9.large-12.columns.end
+        .map-container--registration{id: "registration-map"}
+          %label{ for: 'map_location' }= t(".map_location")
+          %ui-gmap-google-map{options: "map.options", center: "map.center", zoom: "map.zoom"}
+            %ui-gmap-marker{idKey: 1, coords: "latLong"}
+          
+      .row.buttons.center.small-12.medium-9.large-12.columns.end
+        %input.button.primary{ type: "button", value: "{{'locate_address' | t}}", ng: { click: "locateAddress()" } }
+
+      .row.center.small-12.medium-9.large-12.columns.end{ ng: {if: "latLong"}}
+        %p
+        %strong = {{'confirm_location' | t}}
+        .field
+          %input{ id: 'confirm_address_true', type: 'radio', name: 'confirm_address', value: 'true', required: true, ng: { model: 'confirmAddress' } }
+          %label{ for: 'confirm_address_true' } {{'confirm_address_yes' | t}}
+          %input{ id: 'confirm_address_false', type: 'radio', name: 'charges_sales_tax', value: 'false', required: true, ng: { model: 'confirmAddress' } }
+          %label{ for: 'confirm_address_false' } {{'confirm_address_no' | t}}
 
       .row.buttons
         .small-12.columns
