--- a/app/assets/stylesheets/darkswarm/registration.scss
+++ b/app/assets/stylesheets/darkswarm/registration.scss
@@ -171,8 +171,6 @@
   .map-container--registration{
     width: 100%;
     height: 244px;
-    padding-left: 0.9375rem;
-    padding-right: 0.9375rem;
     margin-bottom: 1em;
     map, .angular-google-map-container, google-map, .angular-google-map {
       display: block;
@@ -182,8 +180,11 @@
   }
 
   .center{
-    display: flex;
     justify-content: center;
+  }
+
+  .button.primary{
+    border-radius: 0;
   }
 }
 
