--- a/app/assets/javascripts/admin/spree/base.js.erb
+++ b/app/assets/javascripts/admin/spree/base.js.erb
@@ -119,13 +119,22 @@ $(document).ready(function() {
   if (typeof Spree !== 'undefined' &&
     typeof Spree.translations !== 'undefined') {
     handle_date_picker_fields = function(){
+      $('.datepicker').datepicker({
+        dateFormat: Spree.translations.date_picker,
+        dayNames: Spree.translations.abbr_day_names,
+        dayNamesMin: Spree.translations.abbr_day_names,
+        monthNames: Spree.translations.month_names,
+        prevText: Spree.translations.previous,
+        nextText: Spree.translations.next,
+        showOn: "focus"
+      });
        $.datepicker.regional[I18n.locale] = {
           prevText: Spree.translations.previous,
           nextText: Spree.translations.next,
           monthNames: Spree.translations.month_names,
           dayNames: Spree.translations.abbr_day_names,
           dayNamesMin: Spree.translations.abbr_day_names,
-          dateFormat: Spree.translations.date_picker,
+          dateFormat: Spree.translations.date_picker
       };
       $.datepicker.setDefaults( $.datepicker.regional[I18n.locale]);
 
