Include the 'Ready for' time for the order cycle in the Notify Producers Email
This is so people can distinguish which order cycle the email is referring to. Fixes #6371

--- a/app/views/producer_mailer/order_cycle_report.text.haml
+++ b/app/views/producer_mailer/order_cycle_report.text.haml
@@ -1,6 +1,6 @@
 #{t :producer_mail_greeting} #{@producer.name},
 \
-= t :producer_mail_text_before
+= t :producer_mail_text_before, ready_for: @ready_for
 \
 - if @receival_instructions
   = t :producer_mail_delivery_instructions
