--- a/app/views/producer_mailer/order_cycle_report.html.haml
+++ b/app/views/producer_mailer/order_cycle_report.html.haml
@@ -2,7 +2,7 @@
   = t :producer_mail_greeting
   #{" " + @producer.name},
 %p
-  = t :producer_mail_text_before
+  = t :producer_mail_text_before, ready_for: @ready_for
   - if @receival_instructions
     %p
       %b
