concatenate social links with db value on the frontend

--- a/app/views/shopping_shared/tabs/_contact.html.haml
+++ b/app/views/shopping_shared/tabs/_contact.html.haml
@@ -48,12 +48,12 @@
 
               - if current_distributor.facebook.present?
                 %span
-                  %a{href: "http://#{current_distributor.facebook}", target: "_blank" }
+                  %a{href: "http://facebook.com/#{current_distributor.facebook}", target: "_blank" }
                     %i.facebook.ofn-i_044-facebook
 
               - if current_distributor.linkedin.present?
                 %span
-                  %a{href: "http://#{current_distributor.linkedin}", target: "_blank" }
+                  %a{href: "http://linkedin.com/company/#{current_distributor.linkedin}", target: "_blank" }
                     %i.linkedin.ofn-i_042-linkedin
 
               - if current_distributor.instagram.present?
