--- a/app/views/spree/admin/payments/source_views/_paypal.html.haml
+++ b/app/views/spree/admin/payments/source_views/_paypal.html.haml
@@ -1,4 +1,4 @@
-%fieldset{"data-hook" => "paypal"}
+%fieldset
   %legend{align: "center"}= Spree.t(:transaction, scope: :paypal)
   .row
     .alpha.six.columns
